CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(messages CXX)

FIND_PACKAGE(Protobuf REQUIRED)
INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(PROTOBUF_IMPORT_DIRS ${PROTOBUF_INCLUDE_DIRS})

file(GLOB ProtoFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HEADERS ${ProtoFiles})

ADD_LIBRARY(messages ${PROTO_SRCS} ${PROTO_HEADERS})
TARGET_LINK_LIBRARIES(messages ${Protobuf_LIBRARIES})
INSTALL(TARGETS messages DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/messages)
INSTALL(FILES ${PROTO_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/messages)